[metadata]
name = pb2
summary = Nextgen pastebin
author = Zack Buhman
author-email = zack@buhman.org
home-page = https://github.com/ptpb/pb2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[files]
packages =
    pb
